Convert to HTTP export; add StudyInstanceUID to index.)